# open-cv-study

./: .gitignore  README.md  generate_all_ui2py.py  main.py  main_window.py  opencv-video.ipynb  opencv-video.py  pyproject.toml  ruff.toml  test.py  track-bar.py  ui.ps1  ui.py
